# wasmvm-tracing-poc

./: Cargo.toml  README.md  flake.nix
.direnv/: flake-profile-8-link  flake-profile-9-link
wasm-binary/: Cargo.toml
wasm-binary/src/: lib.rs
wasm-runtime/: Cargo.toml  build.rs
wasm-runtime/src/: ebpf_runner.rs  main.rs  perf_util.rs  wasm_runner.rs
wasm-tracer-abi/: Cargo.toml
wasm-tracer-abi/src/: lib.rs
wasm-tracer-ebpf/: Cargo.toml
wasm-tracer-ebpf/src/: main.rs
