[package]
name = "wasm-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
wasmtime = "41.0.3"
wat = "1.244.0"
aya = { workspace = true }
aya-build = { workspace = true }
aya-ebpf = { workspace = true }
aya-log = { workspace = true }

anyhow = { workspace = true }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true , features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "net",
  "signal",
]}
which = { workspace = true }
wasm-tracer-abi = { path = "../wasm-tracer-abi", features = [ "userspace" ] }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependency so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
wasm-tracer-ebpf = { path = "../wasm-tracer-ebpf" }


